[Ankit|Praveen] Fix. alignment of filter bar.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,6 +9,7 @@
     height: 100vh;
     overflow: scroll;
     margin-top: -4px;
+    overflow: hidden;
 }
 
 body {
