--- a/src/components/home/styles/HomeStyles.module.css
+++ b/src/components/home/styles/HomeStyles.module.css
@@ -2,11 +2,11 @@
     display: flex;
     height: max-content;
     overflow-y: scroll;
-    margin-top: 70px;
+    margin-top: 15px;
     padding-top: 20px;
     flex-direction: row;
     flex-wrap: wrap;
-    max-width: 100%;
+    width: 100%;
     justify-content:space-evenly;
     background-color: rgb(211, 211, 211, 0.1);
     padding-bottom: 50px;
