--- a/src/components/sideMenu/expandedSideMenu/styles/ExpandedSideMenuStyles.css
+++ b/src/components/sideMenu/expandedSideMenu/styles/ExpandedSideMenuStyles.css
@@ -5,7 +5,7 @@
     overflow-y: scroll; 
     overflow-x: hidden;
     height: 100vh;
-    margin-top: 7px;
+    margin-top: 2px;
 }
 
 h4 {
